--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 version: "3.8"
 services:
+  backend:
+    build: ./backend
+    container_name: ripplestocks-backend
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=postgresql://ripplestocks:ripplestocks@db:5432/ripplestocks
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./backend:/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+
   db:
     image: postgres:16
     container_name: ripplestocks-postgres
